ucs-school-umc-exam (9.0.1-22) unstable; urgency=low

  * Bug #50588: cache exam container per OU

 -- Daniel Troeder <troeder@univention.de>  Wed, 04 Dec 2019 09:14:56 +0100

ucs-school-umc-exam (9.0.1-21) unstable; urgency=low

  * Bug #49961: fix syntax error in postinst

 -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 13 Nov 2019 12:19:59 +0100

ucs-school-umc-exam (9.0.1-20) unstable; urgency=low

  * Bug #49961: fix postinst

 -- Ole Schwiegert <schwiegert@univention.de>  Mon, 11 Nov 2019 11:42:43 +0100

ucs-school-umc-exam (9.0.1-19) unstable; urgency=low

  * Bug #49961: Create UCRV to toggle PC restart screen during exam start

 -- Ole Schwiegert <schwiegert@univention.de>  Thu, 07 Nov 2019 07:43:12 +0100

ucs-school-umc-exam (9.0.1-18) unstable; urgency=low

  * Bug #47418: remove UMC code from schoolldap module

 -- Daniel Troeder <troeder@univention.de>  Fri, 01 Nov 2019 21:39:42 +0100

ucs-school-umc-exam (9.0.1-16) unstable; urgency=low

  * Bug #49902: fix KeyError

 -- Daniel Troeder <troeder@univention.de>  Mon, 16 Sep 2019 16:05:07 +0200

ucs-school-umc-exam (9.0.1-15) unstable; urgency=medium

   * Bug #49960: Add login restrictions for exam and original users

 -- Ole Schwiegert <schwiegert@univention.de>  Wed, 04 Sep 2019 15:13:44 +0200

ucs-school-umc-exam (9.0.1-14) unstable; urgency=medium

   * Bug #49953: Make exam folders in exam user homes immutable during exam

 -- Ole Schwiegert <schwiegert@univention.de>  Fri, 09 Aug 2019 10:28:05 +0200

ucs-school-umc-exam (9.0.1-13) unstable; urgency=medium

   * Bug #49859: Apply Juerns patch to improve code quality

 -- Ole Schwiegert <schwiegert@univention.de>  Wed, 24 Jul 2019 08:46:02 +0200

ucs-school-umc-exam (9.0.1-12) unstable; urgency=medium

   * Bug #49801: Fix problems with exam students

 -- Jürn Brodersen <brodersen@univention.de>  Mon, 22 Jul 2019 16:18:42 +0200

ucs-school-umc-exam (9.0.1-11) unstable; urgency=low

  * Bug #49884: Add delete action to overview grid
